# meteor

./: .gitignore  CODEX_ANALYSIS.txt  CODEX_REVIEW.txt  CODEX_WARMUP.txt  Cargo.toml  ENGINE_TASKS.txt  README.md  START.txt  build.rs  meteor.toml  restart.txt  test_clean_uat.rs  test_engine_api.rs  test_namespace_flexibility.rs  test_visual_uat.rs
.analysis/: consolidated_wisdom.txt  mvp_triage.txt  technical_debt.txt
.analysis/.eggs/: egg.1.meteor-analysis.txt  egg.golden.meteor-wisdom.txt  egg.rsb-architecture-review.txt  red_egg.2.meteor-technical-debt-audit.txt
.analysis/.session/: SESSION_01_METEOR_FOUNDATION.md
.eggs/: GOLDEN_EGG.txt  egg.1.docs-consolidation-audit.txt  egg.1.eng02-mutation-hooks-review.txt  egg.1.hub-integration-analysis.txt  egg.1.hybrid-storage-architecture-review.txt  egg.1.implementation-review.meteor.txt  egg.1.meteor-engine-summary.txt  egg.1.meteor-project-status.txt  egg.1.meteor_validation.txt  egg.1.rsb-cli-integration-breakdown.txt  egg.1.rsb-meteor-cli-integration.txt  egg.1.ticket-013a-cli-query-commands.txt  egg.13.cli-enhancement-suite.txt  egg.2.hub-v3-rsb-integration-strategy.txt  egg.2.rsb-token-patterns-analysis.txt  egg.3.hub-v4-lite-full-variants-meteor-strategy.txt  egg.3.rsb-token-legacy-analysis.txt  egg.4.documentation-redundancy-analysis.txt  red_egg.1.rsb-sanity-tests-implementation.txt  red_egg.2.rsb-test-validation-red-laser-analysis.txt
.github/workflows/: profile-regression.yml
benches/: bracket_bench.rs  engine_bench.rs  parser_bench.rs
docs/: CONFIGURATION.md  PROFILE_TESTING.md  README.md  ROOM_CONTINUE.md
docs/.eggs/: egg.1.readme-meteorshower-cleanup.txt
docs/arch/: METEORSHOWER_ENGINE.md  STREAM_ARCHITECTURE.md
docs/archive/: CODEX_ANALYSIS.txt
docs/current/architecture/: DEPRECATED_ARCHITECTURES.md
docs/eggs/: CONTEXT_REHYDRATION_REFERENCE.txt  CONTEXT_RESTART_READING_LIST.txt  ENG-10_REVIEW.txt  egg.1.meteor-context-rehydration.txt
docs/misc/: MODULE_PLAN.md
docs/plans/: RSB_CLI_IMPLEMENTATION.md
docs/procs/: ARCHITECTURE_STATUS.md  CONTINUE.md  PROCESS.txt  QUICK_REF.txt  ROADMAP.txt  SPRINT.txt  TASKS.txt  TICKET-013-BREAKDOWN.md
docs/ref/: HOWTO_HUB.md  RSB_CLI_FEATURES.md  RSB_TOKEN_REFERENCE.md  TOKEN_CONCEPT_AMENDMENT.md  TOKEN_NAMESPACE_CONCEPT.md
docs/ref/architecture/: ENGINE_ENHANCEMENT.md  METEORSHOWER_ENGINE.md  METEOR_FORMAT_PLAN.md  STREAM_ARCHITECTURE.md
docs/ref/guides/: ERROR_SEMANTICS.md  INTEGRATION_BRIEFING.md  TOKEN_NAMESPACE_CONCEPT.md
docs/ref/planning/: ENGINE_TASKS.txt  METEORDB_PLAN.md
docs/ref/reference/: HOWTO_HUB.md  MODULE_PLAN.md  REGRESSION_CLI_PARSER.md  RSB_CLI_FEATURES.md
examples/: README.md  config_demo.rs
src/lib/: config.rs  lib.rs  validation.rs
src/lib/parser/: escape.rs  meteor_stream.rs  mod.rs  organize.rs  parse.rs  split.rs  token_stream.rs  transform.rs
src/lib/sup/: bracket.rs  mod.rs
src/lib/types/: bucket.rs  context.rs  error.rs  mod.rs  namespace.rs  primary.rs
src/lib/types/key/: bracket.rs  key.rs  mod.rs  notation.rs
src/lib/types/meteor/: config.rs  engine.rs  export.rs  meteor.rs  mod.rs  shower.rs  storage_data.rs  workspace.rs
src/lib/types/token/: bucket.rs  mod.rs  token.rs
src/lib/utils/: access.rs  mod.rs  organize.rs  parse.rs  transform.rs  validators.rs
tests/: foundation.rs  sanity.rs  test_cli_output_parity_eng42.rs  test_engine_hybrid.rs  test_engine_iterators.rs  test_iteration_instrumentation.rs  test_repl_functionality_eng42.rs  test_scratch_slot_repl_integration_eng24.rs  test_split_regression_eng42.rs  uat.rs  validation.rs
tests/foundation/: meteor.rs  mod.rs  token.rs  token_key.rs
tests/sanity/: hub_deps_baseline.rs  hub_integration.rs  hub_lite_performance.rs  meteor.rs  meteor_legacy.rs  rsb_baseline.rs  rsb_sanity_cli.rs  rsb_sanity_global.rs  rsb_sanity_options.rs  rsb_sanity_visuals.rs  run.sh  sup.rs  types.rs  utils.rs
tests/uat/: meteor.rs  run.sh
tests/validation/: meteorshower_storage.rs
