[package]
name = "meteor"
version = "0.1.0"
edition = "2021"
description = "Shooting star token data transport library with context-aware namespacing"
repository = "https://github.com/oodx/meteor"
license = "MIT OR Apache-2.0"
authors = ["oodx contributors"]
keywords = ["tokens", "transport", "parsing", "namespacing", "rsb"]
categories = ["parsing", "data-structures"]
readme = "README.md"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "meteor"
path = "src/bin/cli.rs"

[dependencies]
# Hub integration with lite variants for optimal CLI development (v0.4.0)
hub = { git = "https://github.com/oodx/hub.git", features = ["core", "cli-ext", "async-ext", "error-ext"] }

[dev-dependencies]
#criterion = { version = "0.5", default-features = false, features = ["html_reports", "rayon"] }
criterion = "0.7"

[profile.dev]
# Development profile for faster compilation during development
opt-level = 0
debug = true

[profile.release]
# Release profile optimized for performance
opt-level = 3
debug = false
lto = true
codegen-units = 1

[package.metadata.docs.rs]
# Documentation configuration for docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# RSB Test Organization
[[test]]
name = "sanity_meteor"
path = "tests/sanity/meteor.rs"

[[test]]
name = "sanity_types"
path = "tests/sanity/types.rs"

[[test]]
name = "sanity_utils"
path = "tests/sanity/utils.rs"

[[test]]
name = "sanity_sup"
path = "tests/sanity/sup.rs"

[[test]]
name = "uat_meteor"
path = "tests/uat/meteor.rs"

# Legacy tests (to be removed once RSB migration complete)
[[test]]
name = "sanity_legacy"
path = "tests/sanity/meteor_legacy.rs"

# Hub integration tests
[[test]]
name = "sanity_hub_integration"
path = "tests/sanity/hub_integration.rs"

[[test]]
name = "sanity_hub_lite_performance"
path = "tests/sanity/hub_lite_performance.rs"

[[test]]
name = "sanity_hub_deps_baseline"
path = "tests/sanity/hub_deps_baseline.rs"

# RSB preparatory sanity tests (foundational tests for RSB integration)
[[test]]
name = "sanity_rsb_global"
path = "tests/sanity/rsb_global.rs"

[[test]]
name = "sanity_rsb_options"
path = "tests/sanity/rsb_options.rs"

[[test]]
name = "sanity_rsb_fs"
path = "tests/sanity/rsb_fs.rs"

[[test]]
name = "sanity_rsb_strings"
path = "tests/sanity/rsb_strings.rs"

[[test]]
name = "sanity_rsb_host"
path = "tests/sanity/rsb_host.rs"

[[test]]
name = "sanity_rsb_params"
path = "tests/sanity/rsb_params.rs"

[[test]]
name = "sanity_rsb_dev"
path = "tests/sanity/rsb_dev.rs"

[[test]]
name = "sanity_rsb_colors"
path = "tests/sanity/rsb_colors.rs"

[[test]]
name = "sanity_rsb_integration"
path = "tests/sanity/rsb_integration.rs"

# RSB compliance metadata
[package.metadata.rsb]
compliance = "2025-09-20"
architecture = "ordinality-based"
api-style = "string-biased"
