[package]
name = "meteor"
version = "0.1.1"
edition = "2021"
description = "Shooting star token data transport library with context-aware namespacing"
repository = "https://github.com/oodx/meteor"
license = "MIT OR Apache-2.0"
authors = ["oodx contributors"]
keywords = ["tokens", "transport", "parsing", "namespacing", "rsb"]
categories = ["parsing", "data-structures"]
readme = "README.md"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "meteor"
path = "src/bin/cli.rs"

[[bin]]
name = "meteor-config"
path = "src/bin/config.rs"

[[bin]]
name = "meteor-repl"
path = "src/bin/repl.rs"

[features]
default = []
# Usage profile features (build-time configuration for security)
enterprise = []      # Higher limits for enterprise deployments
embedded = []        # Lower limits for embedded/constrained environments
strict = []          # Strictest limits for high-security environments

[dependencies]
# Hub integration for shared dependencies - removed cli-ext for native RSB CLI, added test-ext for criterion
hub = { git = "https://github.com/oodx/hub.git", features = ["core", "async-ext", "error-ext", "test-ext"] }
rsb = { git = "https://github.com/oodx/rsb.git", features = ["visuals", "stdopts"] }

[dev-dependencies]
# criterion provided by hub test-ext feature

[profile.dev]
# Development profile for faster compilation during development
opt-level = 0
debug = true

[profile.release]
# Release profile optimized for performance
opt-level = 3
debug = false
lto = true
codegen-units = 1

[package.metadata.docs.rs]
# Documentation configuration for docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# RSB Test Organization
[[test]]
name = "sanity_meteor"
path = "tests/sanity/meteor.rs"

[[test]]
name = "sanity_types"
path = "tests/sanity/types.rs"

[[test]]
name = "sanity_utils"
path = "tests/sanity/utils.rs"

[[test]]
name = "sanity_sup"
path = "tests/sanity/sup.rs"

[[test]]
name = "uat_meteor"
path = "tests/uat/meteor.rs"

# Legacy tests (to be removed once RSB migration complete)
[[test]]
name = "sanity_legacy"
path = "tests/sanity/meteor_legacy.rs"

# Hub integration tests
[[test]]
name = "sanity_hub_integration"
path = "tests/sanity/hub_integration.rs"

[[test]]
name = "sanity_hub_lite_performance"
path = "tests/sanity/hub_lite_performance.rs"

[[test]]
name = "sanity_hub_deps_baseline"
path = "tests/sanity/hub_deps_baseline.rs"

# RSB baseline sanity tests (real RSB functionality validation)
[[test]]
name = "sanity_rsb_baseline"
path = "tests/sanity/rsb_baseline.rs"

# RSB compliance metadata
[package.metadata.rsb]
compliance = "2025-09-20"
architecture = "ordinality-based"
api-style = "string-biased"

# Performance benchmarks (criterion via hub test-ext)
[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "bracket_bench"
harness = false
